@@ -24,10 +24,11 @@
   else { *(samples) = sum; }
 #else
  /* new WRITE_SAMPLE */
+ /* keep in mind that we are on known little-endian i386 here and special tricks are allowed... */
 #define WRITE_SAMPLE(samples,sum,clip) { \
-  double dtemp; int v; /* sizeof(int) == 4 */ \
-  dtemp = ((((65536.0 * 65536.0 * 16)+(65536.0 * 0.5))* 65536.0)) + (sum);  \
-  v = ((*(int *)&dtemp) - 0x80000000); \
+  union { double d; int i; } temp; int v; /* sizeof(int) == 4 */ \
+  temp.d = ((((65536.0 * 65536.0 * 16)+(65536.0 * 0.5))* 65536.0)) + (sum);  \
+  v = (temp.i - 0x80000000); \
   if( v > 32767) { *(samples) = 0x7fff; (clip)++; } \
   else if( v < -32768) { *(samples) = -0x8000; (clip)++; } \
   else { *(samples) = v; }  \
